--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,7 @@ img {
 	background-color: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
+	border-color: transparent;
 
 	font-family: inherit;
 	font-weight: 700;
@@ -592,6 +593,77 @@ img {
 	background-color: var(--accent-color);
 }
 
+.footer-form-container {
+	padding-top: 12px;
+	margin-left: 93px;
+}
+
+.footer-form {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.footer-form-title {
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 1.14;
+
+	color: var(--title);
+
+	display: block;
+
+	margin-bottom: 20px;
+}
+
+.input-email {
+	display: block;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+
+	width: 358px;
+	height: 50px;
+	background-color: #2f303a;
+	color: var(--title);
+
+	padding-left: 16px;
+}
+
+.btn-form {
+	margin-left: 12px;
+	padding: 10px 28px;
+
+	background-color: var(--accent-color);
+	color: var(--title);
+	border-color: transparent;
+
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	cursor: pointer;
+
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 30px;
+	letter-spacing: 0.06em;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-form:hover,
+.btn-form:focus {
+	background-color: #188ce8;
+}
+
+.footer-form-icon {
+	fill: currentColor;
+}
+
 /* ----- Footer -----*/
 
 /* -----Портфоліо===== */
@@ -630,6 +702,8 @@ img {
 	color: #ffffff;
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+/* -----Портфоліо===== */
 
 /* ----- Роботи -----*/
 
@@ -725,6 +799,8 @@ img {
 	width: 528px;
 	min-height: 581px;
 
+	padding: 40px;
+
 	background-color: #fff;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
@@ -758,12 +834,201 @@ img {
 
 .modal-close-svg {
 	fill: currentColor;
+
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover .modal-close-svg,
+.modal-close:focus .modal-close-svg {
+	fill: var(--accent-color);
+	outline: 0;
 }
 
 .is-hidden {
 	opacity: 0;
 	visibility: hidden;
 	pointer-events: none;
+}
+
+.modal-title {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+	color: var(--title-text-color);
+
+	margin-bottom: 12px;
+}
+
+.modal-label span {
+	display: block;
+	margin-bottom: 4px;
+
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.16;
+	letter-spacing: 0.01em;
+}
+
+.modal-input {
+	width: 100%;
+	height: 40px;
+
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.16;
+	letter-spacing: 0.01em;
+
+	color: currentColor;
+
+	padding-left: 42px;
+	cursor: pointer;
+
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container-form-icon {
+	position: relative;
+	margin-bottom: 10px;
+}
+
+.modal-svg {
+	position: absolute;
+	top: 50%;
+	left: 12px;
+
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover,
+.modal-input:focus {
+	border: 1px solid #2196f3;
+	outline: none;
+}
+
+.modal-input:hover + .modal-svg,
+.modal-input:focus + .modal-svg {
+	fill: var(--accent-color);
+}
+
+.modal-textarea {
+	width: 100%;
+	height: 120px;
+	padding: 12px 16px;
+	margin-bottom: 20px;
+
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.16;
+	letter-spacing: 0.01em;
+
+	color: currentColor;
+
+	resize: none;
+
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:hover,
+.modal-textarea:focus {
+	border: 1px solid #2196f3;
+	outline: none;
+}
+
+.modal-label-terms {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	margin-bottom: 30px;
+}
+
+.modal-checkbox {
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	margin: -1px;
+}
+
+.check-icon {
+	display: inline-block;
+
+	width: 16px;
+	height: 15px;
+	border: 2px solid rgba(33, 33, 33, 1);
+	border-radius: 2px;
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox:checked + .check-icon {
+	background-color: var(--accent-color);
+	border-color: transparent;
+
+	background-image: url(../images/icon\ check.svg);
+	background-size: contain;
+	background-origin: border-box;
+	background-repeat: no-repeat;
+}
+
+.checkbox-text {
+	margin-left: 7px;
+
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.7;
+}
+
+.checkbox-link {
+	margin-left: 3px;
+
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.7;
+
+	text-decoration: underline;
+
+	color: #2196f3;
+}
+
+.modal-btn {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.9;
+	letter-spacing: 0.06em;
+
+	color: var(--title);
+
+	background: #2196f3;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	border-color: transparent;
+
+	width: 200px;
+	height: 50px;
+
+	display: block;
+	margin: auto;
+	cursor: pointer;
+
+	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+	background: #188ce8;
 }
 
 /* ----- Модальне вікно -----*/
