--- a/css/styles.css
+++ b/css/styles.css
@@ -798,6 +798,7 @@ img {
 .modal {
 	width: 528px;
 	min-height: 581px;
+	height: 581px;
 
 	padding: 40px;
 
@@ -914,11 +915,17 @@ img {
 	fill: var(--accent-color);
 }
 
+.modal-label {
+	display: block;
+	margin-bottom: 20px;
+}
+
 .modal-textarea {
+	display: block;
+
 	width: 100%;
 	height: 120px;
 	padding: 12px 16px;
-	margin-bottom: 20px;
 
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
